# ModularGameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.html  config-cef.h.ii  config.h.ii  main.cpp
README/: README.html
README/ADDITIONAL_COPYRIGHT/: BtOgre.txt  Bullet.txt  MicroPather.txt  Ogre-Wiki.txt  OgreAudioVideo.txt
README/ADDITIONAL_COPYRIGHT/other_linked_libraries/: OpenAL.txt  zziplib.txt
README/BUILD.deps/: 0-ToolsAndDependencies.txt  1-OIS.txt  2-OGRE.txt  3-CEGUI.txt  4-BtOgre.txt  4-ChromiumEmbedded.txt  4-OgreAudioVideo.txt  cegui_fix.diff  ogre-python.diff
README/BUILD.deps4win/: 0-Enviroment.sh  1-ToolsAndInit.sh  2-BaseDependencies.sh  3-OIS_OGRE_CEGUI.sh  4-addons.sh  9-install.sh
README/BUILD.deps4win/libs-build_helpers/: BaseDependencies.sh  btogre.sh  bullet.sh  cegui.sh  ogre.sh  ogreoggsound.sh
buildSystem/: Doxyfile.in
buildSystem/cmake/: CompilersSettings.cmake  DependenciesSearch.cmake  FindBtOgre.cmake  FindCEF.cmake  FindCEGUI.cmake  FindOGRE.cmake  FindOIS.cmake  FindOgreOggSound.cmake  FindOgreVideo.cmake  FindPkgMacros.cmake
buildSystem/scripts/: buildInfo.sh  doxygen.sh  preparePyDoc.sh  prepareRunDir.sh  preprocessCompositorScripts.sh  writePyDoc-pdoc.py  writePyDoc-pydoc.py
devel-tools/: alignmentCheck.sh  compare_cegui_looknfeel.py  searchNotScoped.sh
docs-src/: ConfigFiles.md  CoordinateSystem.md  DoxygenLayout.xml  GameModding.md  MicroPather_readme.md  PathFinding.md  PythonScriptsAPI.md  XMLSyntax_ActorComponent.md  XMLSyntax_BasicElements.md  XMLSyntax_Filter.md  XMLSyntax_MainConfig.md  XMLSyntax_MapAndSceneConfig.md  XMLSyntax_MapConfig.md  XMLSyntax_Misc.md  XMLSyntax_Prototypes.md  XMLSyntax_SceneConfig.md  main.md  other.md
engine-src/: CmdLineArgs.cpp  CmdLineArgs.h  Engine.cpp  Engine.h  Engine.py.cpp  EngineSystems.dox  Engine_crash.cpp  MainLoopListener.h  ModuleBase.h
engine-src/core/: EngineCore.dox  LogSystem.cpp  LogSystem.h  MessagesSystem.cpp  MessagesSystem.h  MessagesSystem.py.cpp  ScriptsInterface.cpp  ScriptsInterface.h  ScriptsSystem.cpp  ScriptsSystem.h
engine-src/core/utils/: BaseClasses.h  Concepts.h  EngineModule.h  FormatTime.cpp  FormatTime.h  ListenerSet.h  Range.h  StringOperators.h  StringTypedefs.h  StringUtils.cpp  StringUtils.h  Utf8.cpp  Utf8.h  XmlUtils.cpp  XmlUtils.h  force_inline.h  pragma.h  pybind11_stl_bind.inl  pybind11_swig_cast.inl  with.h  x_string_view.h
engine-src/core/xmlConfigSystem/: ConfigParser.cpp  ConfigParser.h  SceneLoader.cpp  SceneLoader.h  StoreRestoreSystem.cpp  StoreRestoreSystem.h
engine-src/data/: DotSceneLoader.cpp  DotSceneLoader.h  EngineData.dox  LoadingScreen.h  LoadingSystem.cpp  LoadingSystem.h  LoadingSystem.py.cpp  QueryFlags.h
engine-src/data/property/: Any.h  G11n.cpp  G11n.h  G11n.py.cpp  LogicFilter.h  LogicFilter.inl  PropertyFilter.h  PropertyFilter.inl  PropertySet.cpp  PropertySet.h  PropertySetInterface.h  PropertySetInterface.py.cpp  XmlUtils_Ogre.h  pybind11_ogre_swig_cast.py.h  pybind11_stl.py.cpp  pybind11_stl.py.h
engine-src/data/structs/: ActorMessages.h  BaseActor.cpp  BaseActor.h  BaseActor.py.cpp  BaseActor.py.h  BaseComponent.h  BaseComponent.py.cpp  BaseObject.cpp  BaseObject.h  BaseObject.inl  BaseObject.py.cpp  BaseObject.py.h  BasePrototype.cpp  BasePrototype.h  BasePrototype.py.cpp  ComponentsCollection.h
engine-src/data/utils/: NamedSceneNodes.cpp  NamedSceneNodes.h  NamedSceneNodes.py.cpp  OgreResources.cpp  OgreResources.h  OgreResources.py.cpp  OgreSceneObjectInfo.h  OgreSceneObjectInfo.py.cpp  OgreUtils.cpp  OgreUtils.h  OgreUtils.py.cpp  ResourceLocationInfo.h
engine-src/game/: Game.cpp
engine-src/game/actions/: Action.cpp  Action.h  Action.py.cpp  ActionExecutor.cpp  ActionExecutor.h  ActionFactory.cpp  ActionFactory.h  ActionFactory.py.cpp  ActionPrototype.cpp  ActionPrototype.h  ActionPrototype.py.cpp  ActionQueue.cpp  ActionQueue.h  ActionQueue.py.cpp
engine-src/game/actorComponents/: Car.cpp  Car.h  Car.py.cpp  FlammableObject.cpp  FlammableObject.h  Health.cpp  Health.h  Health.py.cpp  Light.cpp  Light.h  Light.py.cpp  SAMPLE.cpp  SAMPLE.h  SelectableObject.cpp  SelectableObject.h  Sound.cpp  Sound.h  Sound.py.cpp  Target.cpp  Target.h  Target.py.cpp  Trigger.cpp  Trigger.h  World3DMovable.cpp  World3DMovable.h  World3DMovable.py.cpp
engine-src/gui/: Gui3D.cpp  Gui3D.h  Gui3D.py.cpp  GuiGenericWindows.cpp  GuiGenericWindows.h  GuiOnTexture.cpp  GuiOnTexture.h  GuiOnTexture.py.cpp  GuiSystem.cpp  GuiSystem.h  GuiSystem.py.cpp  InputAggregator4CEGUI.cpp  InputAggregator4CEGUI.h
engine-src/input/: CameraControl.cpp  CameraControl.h  InputSystem.cpp  InputSystem.h  InputSystem.py.cpp  InteractiveTexture.cpp  InteractiveTexture.h  Selection.cpp  Selection.h  SelectionContextMenu.h  SelectionSet.h  SelectionSet.py.h
engine-src/physics/: GameSpeedMessages.h  PathFinder.cpp  PathFinder.h  PathFinder.py.cpp  Physics.cpp  Physics.h  Raycast.cpp  Raycast.h  Raycast.py.cpp  Raycast_forward.h  TimeSystem.cpp  TimeSystem.h  TimeSystem.py.cpp
engine-src/rendering/: CameraNode.cpp  CameraNode.h  CameraNode.py.cpp  CameraSystem.cpp  CameraSystem.h  CameraSystem.py.cpp  RenderingSystem.cpp  RenderingSystem.h  WindowEventMessage.h
engine-tests/: any.cpp  configParser.cpp  listenerSet.cpp  messageSystem.cpp  pybind_return_value_policy.cpp  pybind_stl_bind.cpp  scriptsSystem.cpp  utf8.cpp  x_string_view1.cpp  x_string_view2.cpp  x_string_view_performance.cpp
engine-tests/python/: python1.py  python2.py  python_swig.py  python_swig.py.cpp
resources/: COPYRIGHT.txt  g11n.xml
resources-src/ConfigFiles/: MGEConfig.xml.in  editor.state.xml  editor.xml  ogre.cfg  plugins.cfg.in  resources.xml
resources-src/EngineMedia/: Markers.blend
resources-src/OGRE_compositor/: 01_StandardNodes.compositor  99_Workspace.compositor
resources-src/Programs/: RunWithLocalLib.sh  cef_sub_process.cpp
resources/Programs4GPU/: SimpleColor_GeometryShader_gs.glsl  SimpleColor_PixelShader_ps.glsl  SimpleColor_VertexShader_vs.glsl
resources/PythonScripts/: engine_debug.py  initScriptTest.py
(+173 files in other folders)
